--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,16 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
+.heading-font {
+  font-family: var(--font-playfair);
+}
+
+@theme{
+  --breakpoint-xs:25rem;
+   --breakpoint-md-lg: 60rem;
+}
+
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -91,7 +101,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+   font-family: var(--font-inter), sans-serif;
 }
 
 .dark {
